[TASK] Force update snapshots.